--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -89,7 +89,7 @@
                                 <a href="/logout?hash={urlencode($csrfToken)}">{_header_log_out}</a>
                             </div>
                             {var $atSearch = str_contains($_SERVER['REQUEST_URI'], "/search")}
-                            <div class="{if $atSearch}nodivider{else}link{/if}">
+                            <div id="srch" class="{if $atSearch}nodivider{else}link{/if}">
 
                                 {if !$atSearch}
                                     <form action="/search" method="get" id="searcher" style="position:relative;">
@@ -105,7 +105,7 @@
                                     </form>
                                 {else}
                                     <form action="/search" method="get" id="searcher" style="margin-top: -1px;position:relative;">
-                                        <input id="searchInput" value="{$_GET['query'] ?? ''}" type="search" class="sr" name="query" placeholder="{_header_search}" style="height: 20px;background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; background-color: #fff; padding-left: 18px;width: 555px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
+                                        <input id="searchInput" value="{$_GET['query'] ?? ''}" type="search" class="sr" name="query" placeholder="{_header_search}" style="height: 20px; background-color: #fff; padding-left: 6px;width: 555px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
                                         <select name="type" class="whatFind">
                                             <option value="users"    {if str_contains($_SERVER['REQUEST_URI'], "type=users")}selected{/if}>{_s_by_people}</option>
                                             <option value="groups"   {if str_contains($_SERVER['REQUEST_URI'], "type=groups")}selected{/if}>{_s_by_groups}</option>
@@ -114,7 +114,7 @@
                                             <option value="videos"   {if str_contains($_SERVER['REQUEST_URI'], "type=videos")}selected{/if}>{_s_by_videos}</option>
                                             <option value="apps"     {if str_contains($_SERVER['REQUEST_URI'], "type=apps")}selected{/if}>{_s_by_apps}</option>
                                         </select>
-                                        <button class="searchBtn">{_search_button}</button>
+                                        <button class="searchBtn"><span style="color:white;font-weight: 600;font-size:12px;">{_header_search}</span></button>
                                     </form>
                                     <script>
                                         let els = document.querySelectorAll("div.dec")
