--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -70,28 +70,60 @@
                                 <a href="/logout?hash={urlencode($csrfToken)}">{_header_log_out}</a>
                             </div>
                         {else}
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/">{_header_home}</a>
                             </div>
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/search?type=groups">{_header_groups}</a>
                             </div>
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/search">{_header_search}</a>
                             </div>
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/invite">{_header_invite}</a>
                             </div>
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/support">{_header_help} <b n:if="$ticketAnsweredCount > 0">({$ticketAnsweredCount})</b></a>
                             </div>
-                            <div class="link">
+                            <div class="link dec">
                                 <a href="/logout?hash={urlencode($csrfToken)}">{_header_log_out}</a>
                             </div>
-                            <div class="link">
-                                <form action="/search" method="get">
-                                    <input type="search" name="query" placeholder="{_header_search}" style="height: 20px;background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; background-color: #fff; padding-left: 18px;width: 120px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
-                                </form>
+                            {var $atSearch = str_contains($_SERVER['REQUEST_URI'], "/search")}
+                            <div id="srch" class="{if $atSearch}nodivider{else}link{/if}">
+
+                                {if !$atSearch}
+                                    <form action="/search" method="get" id="searcher" style="position:relative;">
+                                        <input id="searchInput" onfocus="expandSearch()" onblur="decreaseSearch()" class="sr" type="search" name="query" placeholder="{_header_search}" style="height: 20px;background: url('/assets/packages/static/openvk/img/search_icon.png') no-repeat 3px 4px; background-color: #fff; padding-left: 18px;width: 120px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
+                                        <select name="type" class="whatFind" style="display:none;top: 0px;">
+                                            <option value="users">{_s_by_people}</option>
+                                            <option value="groups">{_s_by_groups}</option>
+                                            <option value="posts">{_s_by_posts}</option>
+                                            <option value="comments">{_s_by_comments}</option>
+                                            <option value="videos">{_s_by_videos}</option>
+                                            <option value="apps">{_s_by_apps}</option>
+                                        </select>
+                                    </form>
+                                {else}
+                                    <form action="/search" method="get" id="searcher" style="margin-top: -1px;position:relative;">
+                                        <input id="searchInput" value="{$_GET['query'] ?? ''}" type="search" class="sr" name="query" placeholder="{_header_search}" style="height: 20px; background-color: #fff; padding-left: 6px;width: 555px;" title="{_header_search} [Alt+Shift+F]" accesskey="f" />
+                                        <select name="type" class="whatFind">
+                                            <option value="users"    {if str_contains($_SERVER['REQUEST_URI'], "type=users")}selected{/if}>{_s_by_people}</option>
+                                            <option value="groups"   {if str_contains($_SERVER['REQUEST_URI'], "type=groups")}selected{/if}>{_s_by_groups}</option>
+                                            <option value="posts"    {if str_contains($_SERVER['REQUEST_URI'], "type=posts")}selected{/if}>{_s_by_posts}</option>
+                                            <option value="comments" {if str_contains($_SERVER['REQUEST_URI'], "type=comments")}selected{/if}>{_s_by_comments}</option>
+                                            <option value="videos"   {if str_contains($_SERVER['REQUEST_URI'], "type=videos")}selected{/if}>{_s_by_videos}</option>
+                                            <option value="apps"     {if str_contains($_SERVER['REQUEST_URI'], "type=apps")}selected{/if}>{_s_by_apps}</option>
+                                        </select>
+                                        <button class="searchBtn"><span style="color:white;font-weight: 600;font-size:12px;">{_header_search}</span></button>
+                                    </form>
+                                    <script>
+                                        let els = document.querySelectorAll("div.dec")
+                                        for(const element of els)
+                                        {
+                                            element.style.display = "none"
+                                        }
+                                    </script>
+                                {/if}
                             </div>
                         {/if}
                     {else}
