--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -115,6 +115,11 @@ a, .page_footer .link, #profile_link, .profile_link {
     background-color: #163f13;
 }
 
+.msg.msg_yellow {
+    border-color:#534a22;
+    background-color:#2f2b19;
+}
+
 h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     color: #7c94c5;
 }
@@ -137,11 +142,11 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/flex_arrow_open.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/flex_arrow_open.png") !important;
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/flex_arrow_shut.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/flex_arrow_shut.gif") !important;
 }
 
 .ovk-video > .preview, .video-preview {
@@ -163,17 +168,17 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.2.8/resource/header_purple.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/header_purple.png") !important;
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/header.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/header.png") !important;
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/header_custom.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/header_custom.png") !important;
 }
 
 .page_yellowheader span, .page_yellowheader a {
@@ -193,11 +198,11 @@ form[action="/search"] > input, .header_search_input, textarea, input[type="text
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/checkbox.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/checkbox.png") !important;
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/radio.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/radio.png") !important;
 }
 
 .header_navigation .link {
@@ -205,19 +210,19 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/like.gif") !important;
 }
 
 .pinned-mark, .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/input_clear.gif") !important;
 }
 
 .user-alert {
@@ -239,6 +244,33 @@ input[type="radio"] {
 }
 
 #backdropEditor {
-    background-image: url("/themepack/midnight/0.0.2.8/resource/backdrop-editor.gif") !important;
+    background-image: url("/themepack/midnight/0.0.2.9/resource/backdrop-editor.gif") !important;
     border-color: #473e66 !important;
+}
+
+.no_access_attachment
+{
+    border-color: white;
+    background-color: rgb(53, 52, 52);
+}
+
+.no_access_attachment:hover
+{
+    background-color: #231e33;
+}
+
+.searchTips {
+    background: #181826;
+    border: 1px solid #2C2640;
+    border-top: 0px;
+}
+
+.searchTips td
+{
+    color: #a48aff;
+}
+
+.searchTips .restip:hover
+{
+    background: #202033;
 }
